--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ANKITH </title>
 
     <!--favicon-img--> 
-        <link rel="icon" type="image/png" href="images/favicon.jpg">
+        <link rel="icon" type="image/png" href="images/favicon.png"> 
     <!--favicon-img-->
 
     <!-- SWIPER CSS LINK -->
