--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
     <!-- CSS LINK -->
     <link rel="stylesheet" href="css/style.css">
     <!-- CSS LINK -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GYD0GDPMXF"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'G-GYD0GDPMXF');
+    </script>
 
 </head>
 <body>
