Edited the tab name and corrected Animals

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ANKITH </title>
+    <title>Ankith Photography</title>
 
     <!--favicon-img--> 
         <link rel="icon" type="image/png" href="images/favicon.png"> 
@@ -400,7 +400,7 @@
                     <a href="#" class="image-sort-button hover" data-sort="portrait">Concert</a>
                     <a href="#" class="image-sort-button hover" data-sort="wedding">Portrait</a>
                     <a href="#" class="image-sort-button hover" data-sort="advertising">Nature</a>
-                    <a href="#" class="image-sort-button hover" data-sort="nature">Animal</a>
+                    <a href="#" class="image-sort-button hover" data-sort="nature">Animals</a>
                     <a href="#" class="image-sort-button hover" data-sort="architecture">Street</a>
                     <a href="#" class="image-sort-button hover" data-sort="places">Art</a> 
                 </div>
