Updated the about page

--- a/index.html
+++ b/index.html
@@ -313,7 +313,13 @@
                     </div>
 
                    <div class="paragraph">
-                    Hi, I am Ankith, a passionate photographer based in Kerala. I am currently focusing more to concert photography and I like capturing portraits and indigenous art forms. I also like to travel and capture different places and the beauty of nature.
+                    A passionate photographer based in Mumbai, India, Ankith Madhusudhanan's journey began with a childhood love of capturing moments with a simple camera. This passion evolved when he picked up his first DSLR in college, igniting a lifelong dedication to storytelling through photography.
+
+Initially drawn to nature, landscapes, and wildlife, Ankith has expanded his repertoire to develop a keen eye for concert photography. Every click of the shutter becomes an adventure, a quest to capture the raw emotions, electrifying performances, and captivating narratives that unfold on stage.
+
+Ankith's experience includes photographing a diverse range of bands, particularly those from Kerala, alongside capturing the energy of artists from across India. His passion extends beyond the concert scene, encompassing the vibrant world of indigenous art forms and travel photography, where he strives to visually document the unique beauty of various locations.
+
+A firm believer in collaboration, Ankith is always eager to connect with like-minded individuals and work on exciting new projects. If you're looking for a concert photographer in Mumbai or simply someone who thrives on capturing the essence of a story through the lens, feel free to get in touch!
                    </div>
 
                   <!-- <div class="paragraph">
